--- a/pinyougou-manager-web/pom.xml
+++ b/pinyougou-manager-web/pom.xml
@@ -92,6 +92,16 @@
         </dependency>
 
 
+        <!-- 身份验证 -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+
     </dependencies>
 
 
