显示规格选项列表

--- a/pinyougou-sellergoods-service/pom.xml
+++ b/pinyougou-sellergoods-service/pom.xml
@@ -83,6 +83,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.pinyougou</groupId>
             <artifactId>pinyougou-sellergoods-interface</artifactId>
